<resources>
    <string name="app_name">Shop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="newest">جدیدترین ها</string>
    <string name="most_visited">پربازدید ترین ها</string>
    <string name="bests">بهترین ها</string>
    <string name="default_userName">علیرضا بیدلی</string>


    <string name="products_categories">دسته بندی محصولات</string>
    <string name="digital_product">کالای دیجیتال</string>
    <string name="cloths_and_fashion">مد و پوشاک</string>
    <string name="sport">ورزش</string>
    <string name="bicycle_and_peripherals">دوچرخه و لوازم حانبی</string>
    <string name="mountaineering_and_camping">کوه نوردی و کمپینگ</string>
    <string name="no_classification">بدون دسته بندی</string>

    <string name="home">خانه</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="untitled">بدون عنوان</string>
    <string name="attributes">مشخصات</string>
    <string name="users_comments">نظرات کاربران</string>
    <string name="description">توضیحات</string>
    <string name="price">قیمت</string>
    <string name="not_found">موردی یافت نشد!!!</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="market">Market</string>
    <string name="product_name">نام محصول</string>
    <string name="header_main_detail">مشخصات اصلی</string>
    <string name="header_other_detail">سایر مشخصات</string>
    <string name="weight">وزن</string>
    <string name="dimensions_text">ابعاد</string>
    <string name="add_to_shops">افزودن به سبد خرید</string>
    <string name="connection_error">عدم دسترسی به اینترنت !!!</string>
    <string name="text_remaining">ادامه مطلب</string>
    <string name="close">بستن</string>
    <string name="currency">تومان</string>
    <string name="connections_error">خطا در اتصال به اینترنت !!</string>
    <string name="try_again_text">تلاش دوباره</string>
    <string name="splash_message">فروشگاه آنلاین</string>
    <string name="total_shopping_sum">جمع کل خرید</string>
    <string name="shopping_cart_warning">این محصول قبلاً به سبد خرید شما اضافه شده است</string>
    <string name="count">تعداد</string>
    <string name="delete">حدف</string>
    <string name="total_price">قیمت کلی</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="order_message">خرید حود را نهایی کنید</string>
    <string name="search_message">جستجو در فروشگاه آنلاین</string>
    <string name="filter">فیلتر کردن</string>
    <string name="sort">مرتب سازی</string>
    <string name="best_sellers">پرفروش ترین ها</string>
    <string name="price_desc">قیمت از زیاد به کم</string>
    <string name="price_asc">قیمت از کم به زیاد</string>
    <string name="order_not_found">سفارشی یافت نشد</string>
    <string name="default_price">0</string>
    <string name="receiver_first_name">نام گیرنده</string>
    <string name="cellular_phone_receiver">شماره تلفن همراه گیرنده</string>
    <string name="phone_receiver">تلفن ثابت گیرنده</string>
    <string name="city_receiver">شهر :</string>
    <string name="country_receiver">کشور</string>
    <string name="postal_code">کدپستی</string>
    <string name="address">آدرس</string>
    <string name="receiver_last_name">نام خانوادگی گیرنده</string>
    <string name="input_error">لطفا فیلد های خالی را پر کنید</string>
    <string name="unique_input_error">%1$s را وارد کنید</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="email">ایمیل</string>
    <string name="submit">ثبت مشخصات</string>
    <string name="perform_filtering">فیلترکردن</string>
    <string name="order_sended_text_1">سفارش شما ثبت شد </string>
    <string name="setting">تنظیمات</string>
    <string name="exit">خروج</string>
    <string name="complete_list">لیست کامل</string>
    <string name="filter_desc">رنگ، نوع، قیمت و ...</string>
    <string name="sort_desc">جدیدترین</string>
    <string name="alarm_newest">اعلان محصولات جدید</string>
    <string name="hours_3"> 3 ساعت</string>
    <string name="hours_8"> 8 ساعت</string>
    <string name="hours_12"> 12 ساعت</string>
    <string name="hours_5"> 5 ساعت</string>
    <string name="selected_custom_hour">ساعت انتخابی شما:</string>
    <string name="default_custom_hour">1</string>
    <string name="select_custom_time">انتخاب مدت زمان دلخواه</string>
    <string name="select_hour_message">فاصله زمانی هر اعلان را انتخاب کنید</string>
    <string name="default_hours">انتخاب زمان های پیش فرض</string>
    <string name="customize_selected_time">انتخاب زمان سفارشی</string>
    <string name="un_selected">انتخاب نشده</string>
    <string name="channel_id">1</string>
    <string name="new_product_picture">محصول جدید اضافه شد!!!</string>
    <string name="new_product_text">هم اکنون محصول جدیدی به فروشگاه اضافه شد!!!</string>
    <string name="channel_name">جدید ترین محصولات</string>
    <string name="channel_description">توضیحات کانال</string>
    <string name="default_notify_hour">هر 12 ساعت یکبار</string>
    <string name="notify_hour_text_part_1">هر </string>
    <string name="notify_hour_text_part_2">ساعت یکبار </string>
    <string name="coupons_text">کد تخفیف دارم</string>
    <string name="coupons_edt_hint">کد تخفیف خود را وارد کنید</string>
    <string name="submit_coupons">ثبت کد تخفیف</string>
    <string name="invalide_coupon_text">کد تخفیف شما نامعتبر است</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="no_review_message">نظری در مورد این محصول هنوز ثبت نشده است</string>
    <string name="send_review_btn">ثبت نقد و بررسی شما</string>
    <string name="review_hint">نظر خود درباره این محصول را وارد کنید</string>
    <string name="submit_rating_text">امتیاز خود را ثبت کنید</string>
    <string name="invalid_review_text">لطفا متن نقد و بررسی خود را وارد کنید</string>
    <string name="send_review_message">نظر شما ارسال شد</string>
    <string name="unsuccessful_send_review_message">متاسفانه نظر شما ارسال نشد</string>
    <string name="select_address_poster_text">ثبت نشانی از روی نقشه</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_address_2">شناخته نشده</string>
    <string name="permission_denied_text">برای استفاده از نقشه به مکان شما نیاز داریم</string>
    <string name="default_billing_country">Iran</string>
    <string name="state">استان</string>
    <string name="necessary_phone">شماره تلفن ضروری</string>
    <string name="address_btn_text">ثبت نشانی</string>
    <string name="map_ardderss_txt">آدرس انتخاب شده :</string>
    <string name="add_new_address">افرودن آدرس حدید</string>

</resources>
