<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controllers.fragmnet.SortDialogFragment">

    <RadioGroup
        android:id="@+id/sort_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
       >

        <RadioButton
            android:id="@+id/radio_best_sellers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best_sellers"
            android:layout_marginBottom="8dp"
/>

        <RadioButton
            android:id="@+id/radio_price_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_desc"
            android:layout_marginBottom="8dp"
/>

        <RadioButton
            android:id="@+id/radio_price_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_asc"
            android:layout_marginBottom="8dp"
/>

        <RadioButton
            android:id="@+id/radio_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newest"
            android:layout_marginBottom="8dp"
/>
    </RadioGroup>
</LinearLayout>